--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "side-project",
+  "name": "ranjeet-santu-collab-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
